--- a/faq.html
+++ b/faq.html
@@ -1,6 +1,32 @@
 <!DOCTYPE html>
 <html lang="fr" data-theme="light">
 <head>
+  <!-- Open Graph / Twitter -->
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="Ludus Mentis" />
+  <meta property="og:url" content="https://ludusmentis.be/faq.html" />
+  <meta property="og:title" content="FAQ - Questions fréquentes | Ludus Mentis" />
+  <meta property="og:description" content="FAQ - Questions fréquentes | Ludus Mentis" />
+  <meta property="og:image" content="https://ludusmentis.be/assets/images/og-default.jpg" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="FAQ - Questions fréquentes | Ludus Mentis" />
+  <meta name="twitter:description" content="FAQ - Questions fréquentes | Ludus Mentis" />
+  <meta name="twitter:image" content="https://ludusmentis.be/assets/images/og-default.jpg" />
+
+
+  <link rel="canonical" href="https://ludusmentis.be/faq.html" />
+
+
+  <!-- A11Y helpers -->
+  <link rel="stylesheet" href="/assets/css/a11y.css" />
+
+  <!-- CMP + Consent Mode v2 -->
+  <script src="/assets/js/consent-default.js"></script>
+  <!-- tarteaucitron at site root per user's structure -->
+  <script src="/tarteaucitron.js/tarteaucitron.js" defer></script>
+  <script src="/assets/js/cmp-tarteaucitron-init.js" defer></script>
+
+
   <meta charset="UTF-8">
   <!-- Google Tag Manager -->
   <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -50,6 +76,8 @@
   <link rel="icon" type="image/png" href="assets/images/Ludus-Mentis-transparent.png">
 </head>
 <body class="min-h-screen bg-base-100">
+<a class="sr-only focus:not-sr-only focus:fixed focus:top-3 focus:left-3 focus:z-50 focus:bg-base-100 focus:text-base-content focus:px-3 focus:py-2 focus:rounded" href="#main">Aller au contenu</a>
+
   <!-- Google Tag Manager (noscript) -->
   <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WMCMP74V"
   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
@@ -57,7 +85,7 @@
   
   <div id="header"></div>
   
-  <main class="container mx-auto px-4 py-8 max-w-4xl">
+  <main class="container mx-auto px-4 py-8 max-w-4xl" id="main">
     <!-- Hero Section -->
     <section class="text-center mb-12">
       <h1 class="text-4xl lg:text-5xl font-bold mb-4 text-gray-800">
