--- a/mentions.html
+++ b/mentions.html
@@ -1,119 +1,99 @@
-<!doctype html>
+<!DOCTYPE html>
+
 <html lang="fr-BE">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Mentions légales & Confidentialité | Ludus Mentis</title>
-  <meta name="description" content="Mentions légales, politique de confidentialité et cookies de Ludus Mentis." />
-
-  <link rel="canonical" href="https://ludusmentis.be/mentions.html" />
-  <!-- OG/Twitter minimal -->
-  <meta property="og:type" content="website" />
-  <meta property="og:site_name" content="Ludus Mentis" />
-  <meta property="og:url" content="https://ludusmentis.be/mentions.html" />
-  <meta property="og:title" content="Mentions légales & Confidentialité | Ludus Mentis" />
-  <meta property="og:description" content="Mentions légales, politique de confidentialité et cookies de Ludus Mentis." />
-  <meta property="og:image" content="https://ludusmentis.be/assets/images/og-mentions.jpg" />
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Mentions légales & Confidentialité | Ludus Mentis" />
-  <meta name="twitter:description" content="Mentions légales, politique de confidentialité et cookies de Ludus Mentis." />
-  <meta name="twitter:image" content="https://ludusmentis.be/assets/images/og-mentions.jpg" />
-
-  <link rel="stylesheet" href="/assets/css/a11y.css" />
-  <!-- CMP -->
-  <script src="/assets/js/consent-default.js"></script>
-  <script src="/tarteaucitron.js/tarteaucitron.js" defer></script>
-  <script src="/assets/js/cmp-tarteaucitron-init.js" defer></script>
-</head>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1" name="viewport"/>
+<title>Mentions légales &amp; Confidentialité | Ludus Mentis</title>
+<meta content="Mentions légales, politique de confidentialité et cookies de Ludus Mentis." name="description"/>
+<link href="https://ludusmentis.be/mentions.html" rel="canonical"/>
+<!-- OG/Twitter minimal -->
+<meta content="website" property="og:type"/>
+<meta content="Ludus Mentis" property="og:site_name"/>
+<meta content="https://ludusmentis.be/mentions.html" property="og:url"/>
+<meta content="Mentions légales &amp; Confidentialité | Ludus Mentis" property="og:title"/>
+<meta content="Mentions légales, politique de confidentialité et cookies de Ludus Mentis." property="og:description"/>
+<meta content="https://ludusmentis.be/assets/images/og-mentions.jpg" property="og:image"/>
+<meta content="summary_large_image" name="twitter:card"/>
+<meta content="Mentions légales &amp; Confidentialité | Ludus Mentis" name="twitter:title"/>
+<meta content="Mentions légales, politique de confidentialité et cookies de Ludus Mentis." name="twitter:description"/>
+<meta content="https://ludusmentis.be/assets/images/og-mentions.jpg" name="twitter:image"/>
+<link href="/assets/css/a11y.css" rel="stylesheet"/>
+<!-- CMP -->
+<script src="/assets/js/consent-default.js"></script>
+<script defer="" src="/tarteaucitron.js/tarteaucitron.js"></script>
+<script defer="" src="/assets/js/cmp-tarteaucitron-init.js"></script>
+<meta content="#ffffff" media="(prefers-color-scheme: light)" name="theme-color"/><meta content="#0a0a0a" media="(prefers-color-scheme: dark)" name="theme-color"/></head>
 <body class="bg-base-100 text-base-content">
-  <a class="sr-only focus:not-sr-only focus:fixed focus:top-3 focus:left-3 focus:z-50 focus:bg-base-100 focus:text-base-content focus:px-3 focus:py-2 focus:rounded" href="#main">Aller au contenu</a>
-
-  <div data-include="/components/header.html"></div>
-
-  <main id="main" class="container mx-auto px-4 py-10 max-w-4xl">
-    <header class="mb-8">
-      <h1 class="text-3xl font-bold">Mentions légales & politique de confidentialité</h1>
-      <p class="text-sm opacity-70 mt-2">Dernière mise à jour : 8 août 2025</p>
-    </header>
-
-    <section class="prose max-w-none">
-      <h2>1. Éditeur du site</h2>
-      <p><strong>Ludus Mentis</strong> <!-- À REMPLACER : forme juridique + n° BCE --> <br>
-      Adresse : <!-- À REMPLACER : adresse postale -->, Walhain, Belgique<br>
+<a class="sr-only focus:not-sr-only focus:fixed focus:top-3 focus:left-3 focus:z-50 focus:bg-base-100 focus:text-base-content focus:px-3 focus:py-2 focus:rounded" href="#main">Aller au contenu</a>
+<div data-include="/components/header.html"></div>
+<main class="container mx-auto px-4 py-10 max-w-4xl" id="main">
+<header class="mb-8">
+<h1 class="text-3xl font-bold">Mentions légales &amp; politique de confidentialité</h1>
+<p class="text-sm opacity-70 mt-2">Dernière mise à jour : 8 août 2025</p>
+</header>
+<section class="prose max-w-none">
+<h2>1. Éditeur du site</h2>
+<p><strong>Ludus Mentis</strong> <!-- À REMPLACER : forme juridique + n° BCE --> <br/>
+      Adresse : <!-- À REMPLACER : adresse postale -->, Walhain, Belgique<br/>
       E-mail : <a href="mailto:info@ludusmentis.be">info@ludusmentis.be</a></p>
-
-      <h2>2. Hébergeur</h2>
-      <p><!-- À REMPLACER : nom de l’hébergeur et coordonnées --></p>
-
-      <h2>3. Propriété intellectuelle</h2>
-      <p>Le contenu de ce site (textes, images, logos, charte graphique) est protégé par le droit d’auteur. Toute reproduction non autorisée est interdite.</p>
-
-      <h2>4. Données personnelles</h2>
-      <h3>4.1. Responsable du traitement</h3>
-      <p>Ludus Mentis, joignable à <a href="mailto:info@ludusmentis.be">info@ludusmentis.be</a>.</p>
-
-      <h3>4.2. Données collectées</h3>
-      <ul>
-        <li><strong>Formulaire de contact</strong> : nom, prénom, e-mail, message (via Formspree).</li>
-        <li><strong>Mesures d’audience</strong> : après consentement (GA4 via tarteaucitron).</li>
-      </ul>
-
-      <h3>4.3. Finalités & bases légales</h3>
-      <ul>
-        <li>Réponse aux demandes — <strong>intérêt légitime</strong> / <strong>précontractuel</strong>.</li>
-        <li>Statistiques — <strong>consentement</strong>.</li>
-      </ul>
-
-      <h3>4.4. Durées de conservation</h3>
-      <ul>
-        <li>Demandes de contact : <strong><!-- À REMPLACER ex. 12 mois --></strong>.</li>
-        <li>Cookies analytiques : selon le cookie (voir tableau ci-dessous).</li>
-      </ul>
-
-      <h3>4.5. Destinataires & transferts</h3>
-      <ul>
-        <li><strong>Formspree</strong> (soumission de formulaires).</li>
-        <li><strong>Google</strong> (Analytics), <em>après consentement</em>.</li>
-      </ul>
-
-      <h3>4.6. Vos droits</h3>
-      <p>Droits d’accès, rectification, effacement, opposition, limitation, portabilité. Contact : <a href="mailto:info@ludusmentis.be">info@ludusmentis.be</a>. Réclamation possible auprès de l’APD.</p>
-
-      <h2 id="cookies">5. Cookies & traceurs</h2>
-      <p>Nous utilisons un gestionnaire de consentement. Aucun cookie non essentiel n’est déposé avant votre choix. Vous pouvez modifier vos préférences à tout moment :</p>
-      <p><button class="btn btn-outline" type="button" onclick="window.showCmp()">Gérer mes préférences</button></p>
-
-      <h3>5.1. Catégories</h3>
-      <ul>
-        <li><strong>Nécessaires</strong> : fonctionnement du site.</li>
-        <li><strong>Statistiques</strong> : mesure d’audience (avec consentement).</li>
-        <li><strong>Marketing</strong> : si activé ultérieurement.</li>
-      </ul>
-
-      <h3>5.2. Liste des cookies</h3>
-      <div class="overflow-x-auto">
-        <table class="table table-zebra">
-          <thead><tr><th>Nom</th><th>Fournisseur</th><th>Finalité</th><th>Durée</th><th>Type</th></tr></thead>
-          <tbody>
-            <tr><td>lm_cookies</td><td>Site</td><td>Mémoriser votre choix</td><td>6–12 mois</td><td>HTTP</td></tr>
-            <tr><td>_ga</td><td>Google</td><td>Statistiques</td><td>13 mois</td><td>HTTP</td></tr>
-          </tbody>
-        </table>
-      </div>
-
-      <h2>6. Sécurité</h2>
-      <p>Nous utilisons des mesures raisonnables (HTTPS, politiques d’en-têtes, CSP) pour protéger vos données.</p>
-
-      <h2>7. Modifications</h2>
-      <p>Nous pouvons mettre à jour ces mentions. La date de dernière mise à jour figure en tête de page.</p>
-
-      <h2>8. Droit applicable</h2>
-      <p>Le droit belge s’applique.</p>
-    </section>
-  </main>
-
-  <div data-include="/components/footer.html"></div>
-
-  <script src="/assets/js/include.js" defer></script>
+<h2>2. Hébergeur</h2>
+<p><!-- À REMPLACER : nom de l’hébergeur et coordonnées --></p>
+<h2>3. Propriété intellectuelle</h2>
+<p>Le contenu de ce site (textes, images, logos, charte graphique) est protégé par le droit d’auteur. Toute reproduction non autorisée est interdite.</p>
+<h2>4. Données personnelles</h2>
+<h3>4.1. Responsable du traitement</h3>
+<p>Ludus Mentis, joignable à <a href="mailto:info@ludusmentis.be">info@ludusmentis.be</a>.</p>
+<h3>4.2. Données collectées</h3>
+<ul>
+<li><strong>Formulaire de contact</strong> : nom, prénom, e-mail, message (via Formspree).</li>
+<li><strong>Mesures d’audience</strong> : après consentement (GA4 via tarteaucitron).</li>
+</ul>
+<h3>4.3. Finalités &amp; bases légales</h3>
+<ul>
+<li>Réponse aux demandes — <strong>intérêt légitime</strong> / <strong>précontractuel</strong>.</li>
+<li>Statistiques — <strong>consentement</strong>.</li>
+</ul>
+<h3>4.4. Durées de conservation</h3>
+<ul>
+<li>Demandes de contact : <strong><!-- À REMPLACER ex. 12 mois --></strong>.</li>
+<li>Cookies analytiques : selon le cookie (voir tableau ci-dessous).</li>
+</ul>
+<h3>4.5. Destinataires &amp; transferts</h3>
+<ul>
+<li><strong>Formspree</strong> (soumission de formulaires).</li>
+<li><strong>Google</strong> (Analytics), <em>après consentement</em>.</li>
+</ul>
+<h3>4.6. Vos droits</h3>
+<p>Droits d’accès, rectification, effacement, opposition, limitation, portabilité. Contact : <a href="mailto:info@ludusmentis.be">info@ludusmentis.be</a>. Réclamation possible auprès de l’APD.</p>
+<h2 id="cookies">5. Cookies &amp; traceurs</h2>
+<p>Nous utilisons un gestionnaire de consentement. Aucun cookie non essentiel n’est déposé avant votre choix. Vous pouvez modifier vos préférences à tout moment :</p>
+<p><button class="btn btn-outline" onclick="window.showCmp()" type="button">Gérer mes préférences</button></p>
+<h3>5.1. Catégories</h3>
+<ul>
+<li><strong>Nécessaires</strong> : fonctionnement du site.</li>
+<li><strong>Statistiques</strong> : mesure d’audience (avec consentement).</li>
+<li><strong>Marketing</strong> : si activé ultérieurement.</li>
+</ul>
+<h3>5.2. Liste des cookies</h3>
+<div class="overflow-x-auto">
+<table class="table table-zebra">
+<thead><tr><th>Nom</th><th>Fournisseur</th><th>Finalité</th><th>Durée</th><th>Type</th></tr></thead>
+<tbody>
+<tr><td>lm_cookies</td><td>Site</td><td>Mémoriser votre choix</td><td>6–12 mois</td><td>HTTP</td></tr>
+<tr><td>_ga</td><td>Google</td><td>Statistiques</td><td>13 mois</td><td>HTTP</td></tr>
+</tbody>
+</table>
+</div>
+<h2>6. Sécurité</h2>
+<p>Nous utilisons des mesures raisonnables (HTTPS, politiques d’en-têtes, CSP) pour protéger vos données.</p>
+<h2>7. Modifications</h2>
+<p>Nous pouvons mettre à jour ces mentions. La date de dernière mise à jour figure en tête de page.</p>
+<h2>8. Droit applicable</h2>
+<p>Le droit belge s’applique.</p>
+</section>
+</main>
+<div data-include="/components/footer.html"></div>
+<script defer="" src="/assets/js/include.js"></script>
 </body>
 </html>
