--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
   })(window,document,'script','dataLayer','GTM-WMCMP74V');</script>
   <!-- End Google Tag Manager -->
-  
+  <script src="/assets/js/theme-toggle.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ludus Mentis | Club de jeu vidéo coopératif à Walhain</title>
   <meta name="description" content="Club extra-scolaire pour les 10-15 ans. Modules de 7 semaines transformant le jeu vidéo coopératif en outil de développement social. Sans loot boxes, sans chat en ligne.">
