--- a/a-propos.html
+++ b/a-propos.html
@@ -140,16 +140,16 @@
       <div class="max-w-3xl mx-auto">
         <ul class="timeline timeline-vertical">
           <li>
-            <div class="timeline-start timeline-box bg-blue-50 border-blue-200">
-              <div class="font-bold text-blue-700">Enfance</div>
+            <div class="timeline-start timeline-box bg-blue-50 border-orange-600">
+              <div class="font-bold text-orange-600">Enfance</div>
               <p class="text-sm">Scouts, musique, football... et déjà les jeux vidéo</p>
             </div>
             <div class="timeline-middle">
-              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-5 h-5 text-blue-500">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-5 h-5 text-orange-600">
                 <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.857-9.809a.75.75 0 00-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 10-1.06 1.061l2.5 2.5a.75.75 0 001.137-.089l4-5.5z" clip-rule="evenodd" />
               </svg>
             </div>
-            <hr class="bg-blue-300"/>
+            <hr class="bg-orange-600"/>
           </li>
           
           <li>
@@ -221,7 +221,7 @@
         </div>
         
         <div class="stat bg-white rounded-2xl shadow-lg border-2 border-gray-200">
-          <div class="stat-figure text-blue-500">
+          <div class="stat-figure text-orange-600">
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" class="inline-block w-8 h-8 stroke-current">
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m5.618-4.016A11.955 11.955 0 0112 2.944a11.955 11.955 0 01-8.618 3.04A12.02 12.02 0 003 9c0 5.591 3.824 10.29 9 11.622 5.176-1.332 9-6.03 9-11.622 0-1.042-.133-2.052-.382-3.016z"></path>
             </svg>
