--- a/charte.html
+++ b/charte.html
@@ -90,7 +90,6 @@
             <div class="text-4xl mb-3">👥</div>
             <h3 class="font-bold text-gray-800 dark:text-gray-100">Encadrement pro</h3>
             <p class="text-sm text-gray-600 dark:text-gray-400">
-              Ratio 1:8-10, objectif 2 adultes visibles
             </p>
           </div>
         </div>
@@ -127,8 +126,8 @@
           
           <div class="grid lg:grid-cols-2 gap-8">
             <!-- Engagements du jeune -->
-            <div class="bg-blue-50 dark:bg-blue-950 rounded-xl p-6 border-2 border-blue-200 dark:border-blue-800">
-              <h3 class="font-bold text-blue-700 dark:text-blue-300 mb-4">
+            <div class="bg-blue-50 dark:bg-orange-600 rounded-xl p-6 border-2 border-orange-600 dark:border-orange-600">
+              <h3 class="font-bold text-orange-600 dark:text-orange-600 mb-4">
                 Engagements du jeune
               </h3>
               <ul class="space-y-2 text-gray-700 dark:text-gray-300">
@@ -236,7 +235,7 @@
                 <ul class="space-y-2 text-sm text-gray-600 dark:text-gray-400">
                   <li>✓ Nom, prénom, âge de l'enfant</li>
                   <li>✓ Coordonnées du parent</li>
-                  <li>✓ Évaluations pré/post anonymisées</li>
+                  <li>✓ retour d’expérience Retour d’expérience anonymisées</li>
                   <li>✓ Aucune donnée sensible</li>
                 </ul>
               </div>
