--- a/concept.html
+++ b/concept.html
@@ -163,9 +163,9 @@
       </p>
       
       <div class="grid md:grid-cols-2 gap-6">
-        <div class="card bg-gradient-to-br from-blue-50 to-indigo-50 border-2 border-blue-200">
+        <div class="card bg-gradient-to-br from-blue-50 to-indigo-50 border-2 border-orange-600">
           <div class="card-body">
-            <h3 class="card-title text-blue-700">🍳 Overcooked</h3>
+            <h3 class="card-title text-orange-600">🍳 Overcooked</h3>
             <p class="text-gray-700">Une masterclass en communication et gestion du stress. 
             Dans ce jeu de cuisine frénétique, impossible de réussir sans coordination 
             parfaite et entraide constante.</p>
