--- a/enjeux.html
+++ b/enjeux.html
@@ -171,10 +171,10 @@
             </h2>
 
             <!-- Enjeu 1 -->
-            <div class="collapse collapse-plus bg-white mb-4 shadow-lg border-2 border-blue-200">
+            <div class="collapse collapse-plus bg-white mb-4 shadow-lg border-2 border-orange-600">
                 <input type="radio" name="enjeux-accordion" checked="checked" />
                 <div class="collapse-title text-xl font-medium">
-                    <span class="text-blue-600">⚖️ Enjeu n°1 :</span> Équilibre vie numérique / vie réelle
+                    <span class="text-orange-600">⚖️ Enjeu n°1 :</span> Équilibre vie numérique / vie réelle
                 </div>
                 <div class="collapse-content">
                     <div class="grid md:grid-cols-2 gap-6 pt-4">
