--- a/contact.html
+++ b/contact.html
@@ -277,7 +277,7 @@
                   </div>
                 </a>
                 
-                <div class="flex items-center gap-3 p-3 bg-blue-50 dark:bg-blue-950 rounded-lg">
+                <div class="flex items-center gap-3 p-3 bg-blue-50 dark:bg-orange-600 rounded-lg">
                   <span class="text-2xl">📍</span>
                   <div>
                     <strong class="text-gray-800 dark:text-gray-100">Lieu</strong>
