--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
           <a href="mailto:info@ludusmentis.be" class="btn btn-primary btn-lg text-white">
             S'inscrire par mail
           </a>
-          <a href="#preuves" class="btn btn-outline btn-primary btn-lg dark:text-orange-400 dark:border-orange-400">
-            Voir les preuves
+          <a href="#Ressources utiles" class="btn btn-outline btn-primary btn-lg dark:text-orange-400 dark:border-orange-400">
+            Voir les Ressources utiles
           </a>
         </div>
         <p class="mt-6 text-sm text-gray-600 dark:text-gray-400">
@@ -121,12 +121,12 @@
       </div>
     </section>
 
-    <!-- Preuves rapides avec icônes -->
-    <section id="preuves" class="grid md:grid-cols-3 gap-6 mb-12">
+    <!-- Ressources utiles rapides avec icônes -->
+    <section id="Ressources utiles" class="grid md:grid-cols-3 gap-6 mb-12">
       <div class="card bg-white dark:bg-gray-800 shadow-xl border-2 border-gray-200 dark:border-gray-700">
         <div class="card-body text-center">
           <div class="text-4xl mb-3">🤝</div>
-          <h3 class="font-bold text-gray-800 dark:text-gray-100">Coopération mesurée</h3>
+          <h3 class="font-bold text-gray-800 dark:text-gray-100">Coopération retour d’expérience</h3>
           <p class="text-sm text-gray-600 dark:text-gray-400">
             Entraide & communication développées par les jeux coopératifs
             <a href="#sources" class="text-orange-600 dark:text-orange-400 text-xs">¹</a>
@@ -200,10 +200,10 @@
       </h2>
       
       <div class="grid md:grid-cols-2 lg:grid-cols-4 gap-4">
-        <div class="card bg-gradient-to-br from-blue-50 to-indigo-50 dark:from-blue-950 dark:to-indigo-950 border-2 border-blue-200 dark:border-blue-800">
+        <div class="card bg-gradient-to-br from-blue-50 to-indigo-50 dark:from-blue-950 dark:to-indigo-950 border-2 border-orange-600 dark:border-orange-600">
           <div class="card-body text-center">
             <div class="text-3xl mb-3">🎮</div>
-            <h3 class="font-bold text-blue-700 dark:text-blue-300">Expérience</h3>
+            <h3 class="font-bold text-orange-600 dark:text-orange-600">Expérience</h3>
             <p class="text-sm text-gray-700 dark:text-gray-300">Jeu coopératif avec mission claire</p>
           </div>
         </div>
@@ -260,18 +260,18 @@
       </div>
     </section>
 
-    <!-- Mesure d'impact -->
+    <!-- Ce qu’on retient -->
     <section class="mb-12">
       <div class="card bg-white dark:bg-gray-800 shadow-xl border-2 border-gray-200 dark:border-gray-700">
         <div class="card-body">
           <h2 class="text-3xl font-bold mb-6 text-center text-gray-800 dark:text-gray-100">
-            On mesure les progrès
+            Ce qu’on retient après 7 semaines
           </h2>
           
           <div class="grid md:grid-cols-3 gap-6">
             <div class="text-center">
               <div class="text-3xl mb-3">📊</div>
-              <h3 class="font-bold text-gray-800 dark:text-gray-100">Pré/Post simple</h3>
+              <h3 class="font-bold text-gray-800 dark:text-gray-100">Retour d’expérience simple</h3>
               <p class="text-sm text-gray-600 dark:text-gray-400">
                 5 items : cohésion, communication, entraide
               </p>
@@ -322,7 +322,6 @@
               <ul class="space-y-2 text-gray-700 dark:text-gray-300">
                 <li>• Images anonymisées par défaut</li>
                 <li>• RGPD respecté</li>
-                <li>• Ratio 1:8-10 (objectif 2 adultes)</li>
                 <li>• Pauses obligatoires</li>
                 <li>• Règle 20-20-20 pour les yeux</li>
               </ul>
@@ -351,7 +350,7 @@
     <section id="sources" class="mb-12">
       <div class="card bg-gray-50 dark:bg-gray-900 border-2 border-gray-300 dark:border-gray-700">
         <div class="card-body">
-          <h2 class="text-2xl font-bold mb-4 text-gray-800 dark:text-gray-100">Preuves scientifiques</h2>
+          <h2 class="text-2xl font-bold mb-4 text-gray-800 dark:text-gray-100">Ressources utiles scientifiques</h2>
           <p class="text-sm text-gray-600 dark:text-gray-400 mb-4">Notre approche s'appuie sur la recherche :</p>
           <ol class="space-y-2 text-xs text-gray-600 dark:text-gray-400">
             <li>¹ Greitemeyer & Mügge (2014) - Jeux prosociaux et comportements. <em>Personality & Social Psychology Bulletin</em></li>
