--- a/infos-tarifs.html
+++ b/infos-tarifs.html
@@ -127,7 +127,7 @@
           </div>
         </div>
         
-        <div class="card bg-white shadow-lg border-2 border-blue-200">
+        <div class="card bg-white shadow-lg border-2 border-orange-600">
           <div class="card-body text-center">
             <div class="text-4xl mb-3">👨‍🏫</div>
             <h3 class="font-bold text-gray-800">Encadrement pro</h3>
@@ -318,8 +318,8 @@
           </h2>
           
           <div class="grid md:grid-cols-3 gap-4">
-            <div class="bg-blue-50 rounded-xl p-4 border-2 border-blue-200">
-              <h3 class="font-bold text-blue-700 mb-2">Module 1</h3>
+            <div class="bg-blue-50 rounded-xl p-4 border-2 border-orange-600">
+              <h3 class="font-bold text-orange-600 mb-2">Module 1</h3>
               <p class="text-sm">Janvier - Février</p>
               <p class="text-xs text-gray-600 mt-2">Découverte & Communication</p>
             </div>
