--- a/programmes.html
+++ b/programmes.html
@@ -59,7 +59,7 @@
     <section class="hero bg-gradient-to-br from-orange-50 to-amber-50 dark:from-orange-950 dark:to-amber-950 rounded-3xl p-8 lg:p-12 mb-8 border-2 border-orange-200 dark:border-orange-800">
       <div class="text-center max-w-4xl mx-auto">
         <h1 class="text-4xl lg:text-5xl font-bold mb-6 text-gray-800 dark:text-gray-100">
-          Un programme structuré et mesuré
+          Un programme structuré et retour d’expérience
         </h1>
         <p class="text-lg text-gray-700 dark:text-gray-300">
           7 semaines × 2h/sem • 8-10 participant·es • 1 animateur formé<br>
@@ -98,15 +98,15 @@
             <!-- Cycle jeu-analyse -->
             <div class="flex gap-4">
               <div class="flex-shrink-0">
-                <div class="bg-blue-500 text-white rounded-full w-12 h-12 flex items-center justify-center font-bold">
+                <div class="bg-orange-600 text-white rounded-full w-12 h-12 flex items-center justify-center font-bold">
                   80'
                 </div>
               </div>
               <div class="flex-grow">
                 <h3 class="font-bold text-gray-800 dark:text-gray-100">Cycle jeu-analyse (Kolb)</h3>
                 <div class="grid md:grid-cols-2 gap-4 mt-3">
-                  <div class="bg-blue-50 dark:bg-blue-950 rounded-lg p-3">
-                    <strong class="text-blue-700 dark:text-blue-300">Jeu 1 (25')</strong>
+                  <div class="bg-blue-50 dark:bg-orange-600 rounded-lg p-3">
+                    <strong class="text-orange-600 dark:text-orange-600">Jeu 1 (25')</strong>
                     <p class="text-sm text-gray-600 dark:text-gray-400">Tâche précise + rôles définis</p>
                   </div>
                   <div class="bg-green-50 dark:bg-green-950 rounded-lg p-3">
@@ -170,9 +170,9 @@
       
       <div class="grid md:grid-cols-3 gap-6">
         <!-- Échauffement -->
-        <div class="card bg-gradient-to-br from-blue-50 to-indigo-50 dark:from-blue-950 dark:to-indigo-950 border-2 border-blue-200 dark:border-blue-800">
+        <div class="card bg-gradient-to-br from-blue-50 to-indigo-50 dark:from-blue-950 dark:to-indigo-950 border-2 border-orange-600 dark:border-orange-600">
           <div class="card-body">
-            <h3 class="card-title text-blue-700 dark:text-blue-300">🔥 Échauffement (5-7')</h3>
+            <h3 class="card-title text-orange-600 dark:text-orange-600">🔥 Échauffement (5-7')</h3>
             <ul class="text-sm space-y-2 text-gray-700 dark:text-gray-300">
               <li>✓ Respiration 4-4-4 (4 cycles)</li>
               <li>✓ Mobilité : épaules, poignets, nuque</li>
@@ -272,7 +272,7 @@
         </div>
 
         <!-- Portal 2 -->
-        <div class="card bg-white dark:bg-gray-800 shadow-lg border-l-4 border-blue-500">
+        <div class="card bg-white dark:bg-gray-800 shadow-lg border-l-4 border-orange-600">
           <div class="card-body">
             <div class="flex items-center gap-3 mb-3">
               <span class="text-2xl">🌀</span>
