--- a/notre-approche.html
+++ b/notre-approche.html
@@ -75,7 +75,7 @@
   <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WMCMP74V"
   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   
-
+ <div id="header"></div>
   
   <main class="container mx-auto px-4 py-8 max-w-6xl">
     <!-- Hero Section -->
