--- a/infos-pratiques.html
+++ b/infos-pratiques.html
@@ -182,7 +182,7 @@
               <div class="flex items-center justify-between p-3 bg-blue-50 rounded-lg">
                 <div>
                   <span class="font-bold">Fratries</span>
-                  <p class="text-sm text-gray-600">207€/enfant</p>
+                  <p class="text-sm text-gray-600">207€/pour le deuxième enfant</p>
                 </div>
                 <span class="badge badge-lg badge-info">-10%</span>
               </div>
