--- a/index.html
+++ b/index.html
@@ -13,6 +13,25 @@
   <meta property="og:title" content="Ludus Mentis | Club de jeu vidéo coopératif" />
   <meta property="og:description" content="Un cadre sain pour la passion gaming de votre enfant. Sessions hebdomadaires encadrées à Walhain." />
 
+    <script>
+    (function(){
+      var saved = localStorage.getItem('theme');
+      var theme;
+      if (saved) {
+        theme = saved;
+      } else {
+        // Détecte TOUS les cas : système, per-device, forced dark mode
+        try {
+          theme = window.matchMedia('(prefers-color-scheme: dark)').matches ? 'ludus-dark' : 'light';
+        } catch(e) {
+          theme = 'light';
+        }
+      }
+      document.documentElement.setAttribute('data-theme', theme);
+      if (theme === 'ludus-dark') document.documentElement.classList.add('dark');
+    })();
+  </script>
+  
   <script src="/assets/js/theme-manager.js"></script>
   
   <!-- Consent Mode v2 (AVANT tout script Google) -->
