--- a/programmes.html
+++ b/programmes.html
@@ -12,7 +12,26 @@
   <meta property="og:url" content="https://ludusmentis.be/programmes.html" />
   <meta property="og:title" content="Programme structuré | Ludus Mentis" />
   <meta property="og:description" content="2h par semaine, 7 semaines par module. Une progression mesurable." />
+   <script>
+    (function(){
+      var saved = localStorage.getItem('theme');
+      var theme;
+      if (saved) {
+        theme = saved;
+      } else {
+        // Détecte TOUS les cas : système, per-device, forced dark mode
+        try {
+          theme = window.matchMedia('(prefers-color-scheme: dark)').matches ? 'ludus-dark' : 'light';
+        } catch(e) {
+          theme = 'light';
+        }
+      }
+      document.documentElement.setAttribute('data-theme', theme);
+      if (theme === 'ludus-dark') document.documentElement.classList.add('dark');
+    })();
+  </script>
   
+  <script src="/assets/js/theme-manager.js"></script>
   <!-- Consent Mode v2 -->
   <script>
     window.dataLayer = window.dataLayer || [];
