--- a/recherche.html
+++ b/recherche.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr" data-theme="ludus">
+<html lang="fr">
 <head>
   <title>La science du jeu vidéo coopératif | Ludus Mentis</title>
   <meta name="description" content="Ce que disent vraiment les études scientifiques sur le jeu vidéo : bénéfices, limites et conditions d'usage positif.">
@@ -8,8 +8,28 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" href="/assets/images/Ludus-Mentis-transparent.png">
   <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" />
-  <script src="https://cdn.tailwindcss.com"></script>
   
+  <script src="https://cdn.tailwindcss.com"></script>
+   <script>
+    (function(){
+      var saved = localStorage.getItem('theme');
+      var theme;
+      if (saved) {
+        theme = saved;
+      } else {
+        // Détecte TOUS les cas : système, per-device, forced dark mode
+        try {
+          theme = window.matchMedia('(prefers-color-scheme: dark)').matches ? 'ludus-dark' : 'light';
+        } catch(e) {
+          theme = 'light';
+        }
+      }
+      document.documentElement.setAttribute('data-theme', theme);
+      if (theme === 'ludus-dark') document.documentElement.classList.add('dark');
+    })();
+  </script>
+  
+  <script src="/assets/js/theme-manager.js"></script>
   <style>
     :root {
       --ludus-teal: #17a2b8;
