--- a/jeux.html
+++ b/jeux.html
@@ -3,16 +3,59 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Nos jeux coopératifs | Ludus Mentis</title>
-  <meta name="description" content="Découvrez notre sélection de jeux 100% coopératifs : Overcooked, Portal 2, Keep Talking... PEGI ≤12, sans loot boxes.">
+  <title>Jeux coopératifs PEGI 12 club gaming | Ludus Mentis</title>
+  <meta name="description" content="Overcooked, Portal 2, Keep Talking : nos jeux 100% coopératifs PEGI ≤12. Alternative saine à Fortnite et Roblox. Club gaming éducatif Walhain.">
   
-  <!-- Open Graph -->
+  <!-- Canonical et indexation -->
+  <link rel="canonical" href="https://ludusmentis.be/jeux.html" />
+  <meta name="robots" content="index, follow" />
+  
+  <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
   <meta property="og:site_name" content="Ludus Mentis" />
   <meta property="og:url" content="https://ludusmentis.be/jeux.html" />
-  <meta property="og:title" content="Nos jeux coopératifs | Ludus Mentis" />
-  <meta property="og:description" content="Jeux 100% coopératifs pour développer communication et entraide. PEGI ≤12." />
-   <script>
+  <meta property="og:title" content="Jeux vidéo coopératifs pour ados | Sans violence" />
+  <meta property="og:description" content="Découvrez notre sélection de jeux coopératifs adaptés 10-15 ans. Sans loot boxes, sans chat toxique." />
+  <meta property="og:image" content="https://ludusmentis.be/assets/images/og-games.jpg" />
+  <meta property="og:locale" content="fr_BE" />
+  
+  <!-- Structured Data for Games -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "ItemList",
+    "name": "Jeux coopératifs Ludus Mentis",
+    "description": "Liste des jeux utilisés au club gaming éducatif",
+    "itemListElement": [
+      {
+        "@type": "VideoGame",
+        "position": 1,
+        "name": "Overcooked! 2",
+        "contentRating": "PEGI 3",
+        "genre": "Coopératif",
+        "numberOfPlayers": "2-4"
+      },
+      {
+        "@type": "VideoGame",
+        "position": 2,
+        "name": "Portal 2 Co-op",
+        "contentRating": "PEGI 12",
+        "genre": "Puzzle coopératif",
+        "numberOfPlayers": "2"
+      },
+      {
+        "@type": "VideoGame",
+        "position": 3,
+        "name": "Keep Talking and Nobody Explodes",
+        "contentRating": "PEGI 3",
+        "genre": "Communication",
+        "numberOfPlayers": "2-4"
+      }
+    ]
+  }
+  </script>
+
+  <script>
     (function(){
       var saved = localStorage.getItem('theme');
       var theme;
@@ -32,7 +75,8 @@
   </script>
   
   <script src="/assets/js/theme-manager.js"></script>
-  <!-- Consent Mode v2 -->
+  
+  <!-- Consent Mode v2 (AVANT tout script Google) -->
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
