--- a/notre-approche.html
+++ b/notre-approche.html
@@ -3,16 +3,42 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Notre approche pédagogique | Ludus Mentis</title>
-  <meta name="description" content="Une méthode scientifique validée pour transformer le jeu vidéo en outil de développement. Cycle de Kolb, jeux coopératifs, routines santé, boîte à outils parents.">
+  <title>Méthode pédagogique gaming éducatif | Ludus Mentis</title>
+  <meta name="description" content="Notre approche scientifique : cycle de Kolb adapté au gaming, jeux 100% coopératifs, pauses actives. Alternative éducative à Fortnite pour ados 10-15 ans.">
   
-  <!-- Open Graph -->
+  <!-- Canonical et indexation -->
+  <link rel="canonical" href="https://ludusmentis.be/notre-approche.html" />
+  <meta name="robots" content="index, follow" />
+  
+  <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
   <meta property="og:site_name" content="Ludus Mentis" />
   <meta property="og:url" content="https://ludusmentis.be/notre-approche.html" />
-  <meta property="og:title" content="Notre approche pédagogique | Ludus Mentis" />
-  <meta property="og:description" content="Comment nous transformons le gaming en opportunité éducative avec une méthode scientifique validée." />
-   <script>
+  <meta property="og:title" content="Méthode scientifique gaming éducatif | Club Walhain" />
+  <meta property="og:description" content="Comment transformer le jeu vidéo en outil de développement des soft skills avec une méthode validée scientifiquement." />
+  <meta property="og:image" content="https://ludusmentis.be/assets/images/og-method.jpg" />
+  <meta property="og:locale" content="fr_BE" />
+  
+  <!-- Structured Data Educational -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Course",
+    "name": "Programme Ludus Mentis",
+    "description": "Programme de développement des compétences sociales par le jeu vidéo coopératif",
+    "provider": {
+      "@type": "Organization",
+      "name": "Ludus Mentis",
+      "url": "https://ludusmentis.be"
+    },
+    "educationalLevel": "10-15 ans",
+    "teaches": ["Communication", "Coopération", "Gestion du stress", "Leadership"],
+    "duration": "PT7W",
+    "timeRequired": "PT2H"
+  }
+  </script>
+
+  <script>
     (function(){
       var saved = localStorage.getItem('theme');
       var theme;
@@ -32,7 +58,8 @@
   </script>
   
   <script src="/assets/js/theme-manager.js"></script>
-  <!-- Consent Mode v2 -->
+  
+  <!-- Consent Mode v2 (AVANT tout script Google) -->
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
