--- a/recherche.html
+++ b/recherche.html
@@ -1,16 +1,48 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <title>La science du jeu vidéo coopératif | Ludus Mentis</title>
-  <meta name="description" content="Ce que disent vraiment les études scientifiques sur le jeu vidéo : bénéfices, limites et conditions d'usage positif.">
-  
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/png" href="/assets/images/Ludus-Mentis-transparent.png">
-  <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" />
+  <title>Études scientifiques jeux vidéo éducatifs | Ludus Mentis</title>
+  <meta name="description" content="Sources scientifiques sur les bénéfices du gaming coopératif : 98 études analysées, +35% comportements prosociaux. Recherche gaming éducatif.">
   
-  <script src="https://cdn.tailwindcss.com"></script>
-   <script>
+  <!-- Canonical et indexation -->
+  <link rel="canonical" href="https://ludusmentis.be/recherche.html" />
+  <meta name="robots" content="index, follow" />
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="article" />
+  <meta property="og:site_name" content="Ludus Mentis" />
+  <meta property="og:url" content="https://ludusmentis.be/recherche.html" />
+  <meta property="og:title" content="La science du gaming éducatif | Études et recherches" />
+  <meta property="og:description" content="Compilation de 98 études scientifiques sur l'impact positif des jeux vidéo coopératifs sur les adolescents." />
+  <meta property="og:image" content="https://ludusmentis.be/assets/images/og-research.jpg" />
+  <meta property="og:locale" content="fr_BE" />
+  
+  <!-- Structured Data Article -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "ScholarlyArticle",
+    "headline": "Ce que la science dit vraiment sur le jeu vidéo éducatif",
+    "description": "Revue des études scientifiques sur l'impact du gaming coopératif",
+    "author": {
+      "@type": "Organization",
+      "name": "Ludus Mentis"
+    },
+    "publisher": {
+      "@type": "Organization",
+      "name": "Ludus Mentis",
+      "url": "https://ludusmentis.be"
+    },
+    "citation": [
+      "Greitemeyer, T., & Mügge, D. O. (2014). Video games do affect social outcomes. Personality and Social Psychology Bulletin",
+      "Orben, A., & Przybylski, A. K. (2019). Adolescent well-being and digital technology. Nature Human Behaviour"
+    ]
+  }
+  </script>
+
+  <script>
     (function(){
       var saved = localStorage.getItem('theme');
       var theme;
@@ -30,15 +62,55 @@
   </script>
   
   <script src="/assets/js/theme-manager.js"></script>
-  <style>
-    :root {
-      --ludus-teal: #17a2b8;
-      --ludus-orange: #ff9800;
+  
+  <!-- Consent Mode v2 (AVANT tout script Google) -->
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    
+    gtag('consent', 'default', {
+      'ad_storage': 'denied',
+      'ad_user_data': 'denied',
+      'ad_personalization': 'denied',
+      'analytics_storage': 'denied',
+      'functionality_storage': 'granted',
+      'personalization_storage': 'granted',
+      'security_storage': 'granted',
+      'wait_for_update': 500
+    });
+  </script>
+  
+  <!-- Google Tag Manager -->
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-WMCMP74V');</script>
+  
+  <!-- DaisyUI + Tailwind -->
+  <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" />
+  <script src="https://cdn.tailwindcss.com"></script>
+  
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          colors: {
+            'ludus-teal': '#17a2b8',
+            'ludus-orange': '#ff9800',
+            'ludus-purple': '#6b46c1'
+          }
+        }
+      }
     }
-    .text-ludus-teal { color: var(--ludus-teal); }
-    .text-ludus-orange { color: var(--ludus-orange); }
-    .bg-ludus-teal { background-color: var(--ludus-teal); }
-    .bg-ludus-orange { background-color: var(--ludus-orange); }
+  </script>
+  
+  <link rel="icon" type="image/png" href="/assets/images/Ludus-Mentis-transparent.png">
+  
+  <style>
+    .gradient-ludus {
+      background: linear-gradient(135deg, #17a2b8 0%, #ff9800 100%);
+    }
   </style>
 </head>
 <body>
