--- a/contact.html
+++ b/contact.html
@@ -165,9 +165,9 @@
         Préinscription pour janvier 2026 • Places limitées
       </p>
       <div class="flex gap-3 justify-center mt-4">
-        <span class="badge badge-primary">10-15 ans</span>
-        <span class="badge badge-secondary">8-10 places/groupe</span>
-        <span class="badge badge-accent">Walhain</span>
+        <span class="badge badge-ludus-teal">10-15 ans</span>
+        <span class="badge badge-ludus-orange">8-10 places/groupe</span>
+        <span class="badge badge-ludus-purple">Walhain</span>
       </div>
     </section>
 
