--- a/jeux.html
+++ b/jeux.html
@@ -141,9 +141,9 @@
         Nos jeux : 100% coop, 0% toxicité
       </h1>
       <div class="flex gap-3 justify-center flex-wrap">
-        <span class="badge badge-lg badge-success">PEGI ≤12</span>
-        <span class="badge badge-lg badge-info">Sans loot boxes</span>
-        <span class="badge badge-lg badge-secondary">Hors ligne uniquement</span>
+        <span class="badge badge-lg badge-ludus-teal">PEGI ≤12</span>
+        <span class="badge badge-lg badge-ludus-orange">Sans loot boxes</span>
+        <span class="badge badge-lg badge-ludus-purple">Hors ligne uniquement</span>
       </div>
     </section>
 
