--- a/programmes.html
+++ b/programmes.html
@@ -134,21 +134,21 @@
   
   <main class="container mx-auto px-4 py-8 max-w-6xl">
     <!-- Hero -->
-    <section class="hero bg-gradient-to-br from-teal-50 to-orange-50 rounded-3xl p-8 lg:p-12 mb-12">
-      <div class="text-center">
-        <h1 class="text-4xl lg:text-5xl font-bold mb-6">
-          Un programme structuré et progressif
-        </h1>
-        <p class="text-lg mb-6 opacity-75">
-          Modules alignés sur le calendrier scolaire de la Communauté française
-        </p>
-        <div class="flex flex-wrap gap-4 justify-center">
-          <div class="badge badge-lg badge-primary">7 semaines/module</div>
-          <div class="badge badge-lg badge-secondary">2h/semaine</div>
-          <div class="badge badge-lg badge-accent">8-10 participants</div>
-        </div>
-      </div>
-    </section>
+   <section class="hero gradient-ludus rounded-3xl p-8 lg:p-12 mb-12 text-white">
+  <div class="text-center max-w-4xl mx-auto">
+    <h1 class="text-4xl lg:text-5xl font-bold mb-6">
+      Un programme structuré et progressif
+    </h1>
+    <p class="text-xl mb-6 opacity-95">
+      Modules alignés sur le calendrier scolaire de la Communauté française
+    </p>
+    <div class="flex flex-wrap gap-4 justify-center">
+      <div class="badge badge-lg bg-white/20 text-white border-0">7 semaines/module</div>
+      <div class="badge badge-lg bg-white/20 text-white border-0">2h/semaine</div>
+      <div class="badge badge-lg bg-white/20 text-white border-0">8-10 participants</div>
+    </div>
+  </div>
+</section>
 
     <!-- Une séance type -->
     <section class="mb-12">
