--- a/jeux.html
+++ b/jeux.html
@@ -136,16 +136,21 @@
   
   <main class="container mx-auto px-4 py-8 max-w-6xl">
     <!-- Hero -->
-    <section class="text-center mb-12">
-      <h1 class="text-4xl lg:text-5xl font-bold mb-4">
-        Nos jeux : 100% coop, 0% toxicité
-      </h1>
-      <div class="flex gap-3 justify-center flex-wrap">
-        <span class="badge badge-lg badge-success">PEGI ≤12</span>
-        <span class="badge badge-lg badge-info">Sans loot boxes</span>
-        <span class="badge badge-lg badge-secondary">Hors ligne uniquement</span>
-      </div>
-    </section>
+    <section class="hero gradient-ludus rounded-3xl p-8 lg:p-12 mb-12 text-white">
+  <div class="text-center max-w-4xl mx-auto">
+    <h1 class="text-4xl lg:text-5xl font-bold mb-6">
+      Nos jeux : 100% coop, 0% toxicité
+    </h1>
+    <p class="text-xl mb-6 opacity-95">
+      Une sélection rigoureuse pour développer les compétences sociales
+    </p>
+    <div class="flex gap-3 justify-center flex-wrap">
+      <span class="badge badge-lg bg-white/20 text-white border-0">PEGI ≤12</span>
+      <span class="badge badge-lg bg-white/20 text-white border-0">Sans loot boxes</span>
+      <span class="badge badge-lg bg-white/20 text-white border-0">Hors ligne uniquement</span>
+    </div>
+  </div>
+</section>
 
     <!-- Nos critères -->
     <section class="mb-12">
