--- a/infos-pratiques.html
+++ b/infos-pratiques.html
@@ -130,17 +130,23 @@
   
   <main class="container mx-auto px-4 py-8 max-w-5xl">
     <!-- Hero avec prix direct -->
-    <section class="text-center mb-12">
-      <h1 class="text-4xl lg:text-5xl font-bold mb-6">
-        Infos pratiques & Tarifs
-      </h1>
-      
-      <div class="inline-flex flex-col items-center bg-gradient-to-br from-green-50 to-emerald-50 rounded-2xl p-8 border-2 border-green-300">
-        <div class="text-5xl font-bold text-ludus-green">230€</div>
-        <p class="text-xl mt-2">Module de 7 semaines</p>
-        <p class="opacity-75">= 16,43€/heure tout compris</p>
-      </div>
-    </section>
+    <section class="hero gradient-ludus rounded-3xl p-8 lg:p-12 mb-12 text-white">
+  <div class="text-center max-w-4xl mx-auto">
+    <h1 class="text-4xl lg:text-5xl font-bold mb-6">
+      Infos pratiques & Tarifs
+    </h1>
+    <p class="text-xl mb-6 opacity-95">
+      Tout ce que vous devez savoir pour nous rejoindre
+    </p>
+    
+    <!-- Prix mis en avant dans la hero -->
+    <div class="inline-flex flex-col items-center bg-white/20 backdrop-blur rounded-2xl p-6 border-2 border-white/30">
+      <div class="text-5xl font-bold">230€</div>
+      <p class="text-lg mt-2">Module de 7 semaines</p>
+      <p class="opacity-90 text-sm">= 16,43€/heure tout compris</p>
+    </div>
+  </div>
+</section>
 
     <!-- Informations essentielles -->
     <section class="mb-12">
