--- a/contact.html
+++ b/contact.html
@@ -158,19 +158,21 @@
     </div>
     
     <!-- Hero -->
-    <section class="text-center mb-12">
-      <h1 class="text-4xl lg:text-5xl font-bold mb-4">
-        Rejoignez Ludus Mentis
-      </h1>
-      <p class="text-lg text-gray-600">
-        Préinscription pour janvier 2026 • Places limitées
-      </p>
-      <div class="flex gap-3 justify-center mt-4">
-        <span class="badge badge-primary">10-15 ans</span>
-        <span class="badge badge-secondary">8-10 places/groupe</span>
-        <span class="badge badge-accent">Walhain</span>
-      </div>
-    </section>
+   <section class="hero gradient-ludus rounded-3xl p-8 lg:p-12 mb-12 text-white">
+  <div class="text-center max-w-4xl mx-auto">
+    <h1 class="text-4xl lg:text-5xl font-bold mb-6">
+      Rejoignez Ludus Mentis
+    </h1>
+    <p class="text-xl mb-6 opacity-95">
+      Préinscription pour janvier 2026 • Places limitées
+    </p>
+    <div class="flex gap-3 justify-center">
+      <span class="badge badge-lg bg-white/20 text-white border-0">10-15 ans</span>
+      <span class="badge badge-lg bg-white/20 text-white border-0">8-10 places/groupe</span>
+      <span class="badge badge-lg bg-white/20 text-white border-0">Walhain</span>
+    </div>
+  </div>
+</section>
 
     <div class="grid lg:grid-cols-2 gap-8">
       <!-- Formulaire simplifié -->
