--- a/recherche.html
+++ b/recherche.html
@@ -118,19 +118,19 @@
   
   <main class="container mx-auto px-4 py-8 max-w-6xl">
     <!-- Hero -->
-    <section class="hero bg-gradient-to-br from-teal-50 to-orange-50 rounded-3xl p-8 lg:p-12 mb-12 border-2 border-ludus-teal">
-      <div class="text-center max-w-4xl mx-auto">
-        <h1 class="text-4xl lg:text-5xl font-bold mb-6 text-ludus-teal">
-          Ce que la science dit vraiment sur le jeu vidéo
-        </h1>
-        <p class="text-lg">
-          Une revue objective des études scientifiques :<br>
-          <strong class="text-ludus-orange">Les bénéfices</strong>, 
-          <strong class="text-ludus-teal">les limites</strong>, et 
-          <strong>les conditions d'un usage positif</strong>
-        </p>
-      </div>
-    </section>
+   <section class="hero gradient-ludus rounded-3xl p-8 lg:p-12 mb-12 text-white">
+  <div class="text-center max-w-4xl mx-auto">
+    <h1 class="text-4xl lg:text-5xl font-bold mb-6">
+      Ce que la science dit vraiment sur le jeu vidéo
+    </h1>
+    <p class="text-xl opacity-95">
+      Une revue objective des études scientifiques :<br>
+      <strong>Les bénéfices</strong>, 
+      <strong>les limites</strong>, et 
+      <strong>les conditions d'un usage positif</strong>
+    </p>
+  </div>
+</section>
 
     <!-- Consensus scientifique -->
     <section class="mb-12">
