--- a/mentions.html
+++ b/mentions.html
@@ -104,14 +104,16 @@
   
   <main id="main" class="container mx-auto px-4 py-8 max-w-4xl">
     <!-- En-tête -->
-    <header class="mb-12 text-center">
-      <h1 class="text-4xl font-bold mb-4">
-        Mentions légales & Politique de confidentialité
-      </h1>
-      <p class="opacity-75">
-        Dernière mise à jour : 10 août 2025
-      </p>
-    </header>
+    <section class="hero gradient-ludus rounded-3xl p-8 lg:p-12 mb-12 text-white">
+  <div class="text-center max-w-4xl mx-auto">
+    <h1 class="text-4xl lg:text-5xl font-bold mb-4">
+      Mentions légales & Politique de confidentialité
+    </h1>
+    <p class="text-xl opacity-95">
+      Dernière mise à jour : 10 août 2025
+    </p>
+  </div>
+</section>
 
     <!-- Navigation des sections -->
     <nav class="mb-8">
