--- a/a-propos.html
+++ b/a-propos.html
@@ -124,25 +124,23 @@
   
   <main class="container mx-auto px-4 py-8 max-w-4xl">
     <!-- Hero avec photo -->
-    <section class="hero bg-gradient-to-br from-teal-50 to-orange-50 rounded-3xl p-8 lg:p-12 mb-12">
-      <div class="text-center">
-        <div class="avatar placeholder mb-6">
-          <div class="bg-gradient-to-br from-ludus-teal to-ludus-orange text-white rounded-full w-32 h-32">
-            <span class="text-4xl font-bold">AB</span>
-          </div>
-        </div>
-        
-        <h1 class="text-4xl lg:text-5xl font-bold mb-4">
-          Antoine Billard
-        </h1>
-        <p class="text-xl">
-          Fondateur de Ludus Mentis<br>
-          <span class="text-ludus-teal">Chef de projet IT</span> • 
-          <span class="text-ludus-orange">Gamer depuis 20 ans</span> • 
-          <span class="text-ludus-purple">Manager esport Dota 2</span>
-        </p>
+    <section class="hero gradient-ludus rounded-3xl p-8 lg:p-12 mb-12 text-white">
+  <div class="text-center max-w-4xl mx-auto">
+    <div class="avatar placeholder mb-6">
+      <div class="bg-white/20 backdrop-blur text-white rounded-full w-32 h-32 border-2 border-white/30">
+        <span class="text-4xl font-bold">AB</span>
       </div>
-    </section>
+    </div>
+    
+    <h1 class="text-4xl lg:text-5xl font-bold mb-4">
+      Antoine Billard
+    </h1>
+    <p class="text-xl opacity-95">
+      Fondateur de Ludus Mentis<br>
+      <span class="opacity-90">Chef de projet IT • Gamer depuis 20 ans • Manager esport Dota 2</span>
+    </p>
+  </div>
+</section>
 
     <!-- Mon histoire personnelle -->
     <section class="mb-12">
