--- a/jeux.html
+++ b/jeux.html
@@ -215,6 +215,11 @@
             <div class="divider my-2"></div>
             <p class="text-xs font-bold text-orange-600">Ce qu'on retient :</p>
             <p class="text-xs opacity-75">Communication claire, gestion du stress</p>
+            <a href="https://www.nintendo.com/us/store/products/overcooked-2-switch/" 
+               target="_blank" rel="noopener" 
+               class="btn btn-xs btn-outline btn-primary mt-2">
+              ▶️ Voir le trailer
+            </a>
           </div>
         </div>
 
@@ -233,6 +238,11 @@
             <div class="divider my-2"></div>
             <p class="text-xs font-bold text-blue-600">Ce qu'on retient :</p>
             <p class="text-xs opacity-75">Pensée spatiale, patience</p>
+            <a href="https://www.nintendo.com/us/store/products/portal-companion-collection-switch/" 
+               target="_blank" rel="noopener" 
+               class="btn btn-xs btn-outline btn-primary mt-2">
+              ▶️ Voir le trailer
+            </a>
           </div>
         </div>
 
@@ -251,6 +261,11 @@
             <div class="divider my-2"></div>
             <p class="text-xs font-bold text-red-600">Ce qu'on retient :</p>
             <p class="text-xs opacity-75">Écoute active, précision verbale</p>
+            <a href="https://www.nintendo.com/us/store/products/keep-talking-and-nobody-explodes-switch/" 
+               target="_blank" rel="noopener" 
+               class="btn btn-xs btn-outline btn-primary mt-2">
+              ▶️ Voir le trailer
+            </a>
           </div>
         </div>
 
@@ -269,6 +284,11 @@
             <div class="divider my-2"></div>
             <p class="text-xs font-bold text-purple-600">Ce qu'on retient :</p>
             <p class="text-xs opacity-75">Leadership rotatif, entraide</p>
+            <a href="https://www.nintendo.com/us/store/products/lovers-in-a-dangerous-spacetime-switch/" 
+               target="_blank" rel="noopener" 
+               class="btn btn-xs btn-outline btn-primary mt-2">
+              ▶️ Voir le trailer
+            </a>
           </div>
         </div>
 
@@ -287,6 +307,11 @@
             <div class="divider my-2"></div>
             <p class="text-xs font-bold text-green-600">Ce qu'on retient :</p>
             <p class="text-xs opacity-75">Planification, persévérance</p>
+            <a href="https://www.nintendo.com/us/store/products/moving-out-switch/" 
+               target="_blank" rel="noopener" 
+               class="btn btn-xs btn-outline btn-primary mt-2">
+              ▶️ Voir le trailer
+            </a>
           </div>
         </div>
 
